--- a/Mantenimiento/Mantenimiento.csproj
+++ b/Mantenimiento/Mantenimiento.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="empleadosDataSet.xsc">
       <DependentUpon>empleadosDataSet.xsd</DependentUpon>
@@ -98,6 +99,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\agregar-archivo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\archivos.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tasa-de-utilidad.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\disable_remove_delete_exit_close_11881.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\salvar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\actualizar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\eliminar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\frecuencia.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\disco-flexible.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
